--- a/en/index.yaml
+++ b/en/index.yaml
@@ -8,3 +8,10 @@ sources:
     url: "https://raw.githubusercontent.com/HnDK0/lua-sources/main/en/freewebnovel_advanced.lua"
     icon: "https://raw.githubusercontent.com/HnDK0/lua-sources/main/icons/freewebnovel.png"
     language: "en"
+  - id: "test_source"
+    name: "Test Source"
+    version: "1.0.0"
+    description: "Test Lua source for dynamic loading validation"
+    url: "https://raw.githubusercontent.com/HnDK0/lua-sources/main/en/test_source.lua"
+    icon: "https://raw.githubusercontent.com/HnDK0/lua-sources/main/icons/test.png"
+    language: "en"
